--- a/packages/WalkingPromotor/app/src/main/res/drawable-nodpi/frame_style.xml
+++ b/packages/WalkingPromotor/app/src/main/res/drawable-nodpi/frame_style.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- shape:oval(=楕円形) -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-  android:shape="oval">
-
-  <!-- サイズを指定 -->
-  <size
-    android:width="100dp"
-    android:height="100dp"/>
+  android:shape="rectangle">
 
   <!-- 背景色 -->
-  <solid android:color="#e67e22" />
+  <solid android:color="#ffffff" />
+
+  <!-- 角の丸み -->
+  <corners android:radius="6dp" />
+
+  <!-- 枠線 width:線の幅、color:線の色 -->
+  <stroke
+    android:width="3dp"
+    android:color="#00b489" />
 
 </shape>
