--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_sign.xml
@@ -6,30 +6,35 @@
   android:layout_height="match_parent"
   tools:context="io.github.healthifier.walking_promoter.activities.SignActivity">
 
-  <Button
-    android:id="@+id/btnSignUp"
-    android:layout_width="300dp"
-    android:layout_height="100dp"
-    android:layout_marginStart="160dp"
-    android:layout_marginBottom="80dp"
-    android:background="#8BC34A"
-    android:text="新規登録"
-    android:textSize="30sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+  <!-- ツールバー -->
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="#08AF0F"
+    android:fitsSystemWindows="true"
+    android:minHeight="?attr/actionBarSize"
+    android:textStyle="bold"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:title="スタートメニュー"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    app:titleTextColor="#FFFFFF"
+    tools:ignore="MissingConstraints" />
 
 
   <EditText
     android:id="@+id/userName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="32dp"
     android:descendantFocusability="beforeDescendants"
-    android:ems="10"
+    android:ems="14"
     android:focusableInTouchMode="true"
     android:hint="ユーザー名"
     android:inputType="textPersonName"
-    android:textSize="30sp"
+    android:textSize="38sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
@@ -40,48 +45,83 @@
     android:id="@+id/lblStats"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="64dp"
-    android:layout_marginEnd="32dp"
+    android:layout_marginTop="32dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:text="ユーザー名を入力して新規登録/ログインしてください"
+    android:textColor="#000000"
     android:textSize="30sp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
 
     <requestFocus />
   </TextView>
 
-  <Button
-    android:id="@+id/btnSignIn"
-    android:layout_width="180dp"
+  <LinearLayout
+    android:id="@+id/linearLayout_sign"
+    android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_marginEnd="128dp"
-    android:layout_marginBottom="80dp"
-    android:backgroundTint="#8BC34A"
-    android:text="ログイン"
-    android:textSize="30sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+    android:layout_marginBottom="8dp"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toBottomOf="parent">
 
-  <Spinner
-    android:id="@+id/spinner"
-    android:layout_width="100dp"
-    android:layout_height="60dp"
-    android:layout_marginTop="50dp"
-    android:layout_marginEnd="128dp"
-    android:background="@android:color/black"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/lblStats" />
+    <Button
+      android:id="@+id/btnSignUp"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="4dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:text="新規登録"
+      android:textSize="38sp" />
 
-  <ImageView
-    android:id="@+id/imageView6"
-    android:layout_width="99dp"
-    android:layout_height="118dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="32dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:srcCompat="@android:drawable/ic_menu_myplaces" />
+    <Button
+      android:id="@+id/btnSignIn"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_margin="4dp"
+      android:layout_weight="1"
+      android:background="@drawable/frame_style"
+      android:text="ログイン"
+      android:textSize="38sp" />
+  </LinearLayout>
+
+  <TableLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toTopOf="@+id/linearLayout_sign"
+    android:stretchColumns="0,1,2,3">
+
+    <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+      <ImageButton
+        android:id="@+id/image_apple"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/cat_success" />
+
+      <ImageButton
+        android:id="@+id/image_grape"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/cat_success" />
+
+      <ImageButton
+        android:id="@+id/image_peach"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/cat_success" />
+
+      <ImageButton
+        android:id="@+id/image_lemon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/cat_success" />
+    </TableRow>
+  </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
