--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_tokaido_map_fragment.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_tokaido_map_fragment.xml
@@ -29,34 +29,44 @@
       android:textStyle="bold"
       tools:ignore="MissingConstraints" />
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-      android:id="@+id/map"
-      android:name="com.google.android.gms.maps.SupportMapFragment"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
-
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="horizontal">
+      android:orientation="vertical">
 
-      <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="総歩数：120,000歩"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="32sp" />
+      <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="7"/>
 
-      <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/frame_style"
-        android:text="前の画面に戻る"
-        android:textSize="32sp"/>
+        android:orientation="horizontal">
+
+        <TextView
+          android:id="@+id/textView"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="5"
+          android:text="総歩数：120,000歩"
+          android:textAppearance="?android:attr/textAppearanceLarge"
+          android:textSize="32sp" />
+
+        <Button
+          android:id="@+id/button"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="3"
+          android:background="@drawable/frame_style"
+          android:drawableStart="@drawable/ic_baseline_undo_24_60"
+          android:paddingHorizontal="16dp"
+          android:text="前の画面に戻る"
+          android:textSize="32sp" />
+      </LinearLayout>
     </LinearLayout>
 
   </LinearLayout>
